feat:Update theme and some sentence for kroma

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,21 @@
 <html translate="no">
   <head>
     <meta charset="utf-8" />
+    <link href="%PUBLIC_URL%/kroma-favicon.svg" rel="icon" />
 
-    <title>Uniswap Interface</title>
-    <meta name="description" content="Swap or provide liquidity on the Uniswap Protocol" />
+    <title>Kroma | Experience the Full Spectrum of Scaled Ethereum</title>
+    <meta name="description" content="Kroma is an Ethereum L2 focused on creating a Universal ZK Rollup" />
 
     <!--
       %PUBLIC_URL% will be replaced with the URL of the `public` folder during build.
       Only files inside the `public` folder can be referenced from the HTML.
     -->
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+    <!-- <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" /> -->
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/192x192_App_Icon.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/512x512_App_Icon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#FC72FF" />
+    <meta name="theme-color" content="#14C110" />
     <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'"
