fix: update favicon to png

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html translate="no">
   <head>
     <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/kroma-favicon.svg" rel="icon" />
+    <link href="%PUBLIC_URL%/kroma-favicon.png" rel="icon" />
 
     <title>Kroma | Experience the Full Spectrum of Scaled Ethereum</title>
     <meta name="description" content="Kroma is an Ethereum L2 focused on creating a Universal ZK Rollup" />
